--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,4 +6,13 @@
   html {
     font-family: "Roboto", system-ui, sans-serif;
   }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE/Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome/Safari */
+  }
 }
