--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,11 +8,11 @@
   }
 
   .no-scrollbar {
-    -ms-overflow-style: none; /* IE/Edge */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 
   .no-scrollbar::-webkit-scrollbar {
-    display: none; /* Chrome/Safari */
+    display: none;
   }
 }
